# todo-rs-ai

./: 00-READ-ME-FIRST.md  CHECKLIST.md  Cargo.toml  INDEX.md  MANIFEST.md  PLATFORM_COMPATIBILITY.md  PRD.md  PRODUCTION_READINESS_SUMMARY.md  README.md  TECHNICAL_ISSUES.md  build.bat  build.sh  cross-compile.sh  install.bat  install.sh  package-macos.sh  package-portable.sh  package-windows.bat  rust-toolchain.toml  tasks.db  uninstall.bat  uninstall.sh
src/: main.rs
src/ai/: mod.rs
src/config/: mod.rs
src/core/: cache.rs  mod.rs
src/db/: mod.rs
src/sync/: mod.rs
src/ui/: mod.rs
